Fixed deprecated url stuff in UpdateChecker.java
Took 2 minutes